--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "juketube",
   "version": "2.8.10",
   "description": "A Discord.js v12 module to simplify your music commands and play songs with audio filters on Discord without any API key. Support YouTube, SoundCloud, Bandcamp, Facebook, and 700+ more sites",
-  "main": "src/DisTube.js",
-  "typings": "typings/DisTube.d.ts",
+  "main": "src/JukeTube.js",
+  "typings": "typings/JukeTube.d.ts",
   "scripts": {
     "types": "tsc -p .",
     "docs": "jsdoc -c jsdoc.json",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/distubejs/distube.git"
+    "url": "git+https://github.com/fnionn/juketube.git"
   },
   "keywords": [
     "youtube",
