--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "juketube",
+  "name": "labtube",
   "version": "2.8.10",
   "description": "A Discord.js v12 module to simplify your music commands and play songs with audio filters on Discord without any API key. Support YouTube, SoundCloud, Bandcamp, Facebook, and 700+ more sites",
   "main": "src/JukeTube.js",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fnionn/juketube.git"
+    "url": "git+https://github.com/fnionn/labtube.git"
   },
   "keywords": [
     "youtube",
@@ -31,7 +31,7 @@
     "music-bot",
     "discord-js"
   ],
-  "author": "Skick (https://github.com/distubejs/)",
+  "author": "Skick (https://github.com/distubejs/) (Modified by fnionn)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/distubejs/distube/issues"
@@ -57,7 +57,6 @@
     "typescript": "^4.2.2"
   },
   "engines": {
-    "discord.js": "^12.0.0",
     "node": ">=12"
   }
 }
